@@ -372,3 +372,7 @@ file(WRITE
 file(COPY ${CMAKE_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/build.sh
   DESTINATION ${CMAKE_BINARY_DIR}
   FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE)
+
+if (ENABLE_SUBTLE_CRYPTO)
+    find_package(GnuTLS 3.0.0 REQUIRED)
+endif ()
